--- a/1.html
+++ b/1.html
@@ -32,6 +32,7 @@
        <br/><i>Paragraf cümlesi 4, italic harfler</i>
        <br/><u>Paragraf cümlesi 5, underline harfler</u>
     </p>
+    
 <center> <!--ortaya hizalayalım-->
     <img src="images/grogu.jpg" width="300" height="300"> <!--img elementi ekrana görsel dosyaların basılmasını sağlar-->
 </center>
@@ -42,8 +43,10 @@
 <a href="https://www.digitalspy.com/tv/ustv/a34939443/the-mandalorian-season-3-release-date-disney-plus/" target="_blank">The Mandalorian Season 3</a>
 
 <br/><br/>
+
+
 <!-- bu defa metne değil resme link verelim-->
-<a href="https://cdn.vox-cdn.com/thumbor/-4eE4Ar7KGJUy7GSzO4Hk234NJk=/0x0:3840x1620/920x613/filters:focal(1398x353:2012x967):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/65687870/mandalorianpascal.0.jpeg" target="_blank"> <img src="images/mandalorian.jpg" border="0"> <!-- border yani kenarlık olmasın anlamında kullandık chrome koymuyor ama diğer tarayıcıları bilmiyoruz bu nedenle diğer tarayıcılar ile uyumluluk tablosuna bakmamız lazım w3.schoolsta kontrol et -->
+<a href="https://cdn.vox-cdn.com/thumbor/-4eE4Ar7KGJUy7GSzO4Hk234NJk=/0x0:3840x1620/920x613/filters:focal(1398x353:2012x967):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/65687870/mandalorianpascal.0.jpeg" target="_blank"> <img src="images/mandalorian.jpg" border="0" style="cursor:pointer"> <!-- border yani kenarlık olmasın anlamında kullandık chrome koymuyor ama diğer tarayıcıları bilmiyoruz bu nedenle diğer tarayıcılar ile uyumluluk tablosuna bakmamız lazım w3.schoolsta kontrol et -->
 </a>
 
 
