Css çalışmaları still referansları

--- a/8css.html
+++ b/8css.html
@@ -20,7 +20,10 @@
             background-color: greenyellow;
             color:indigo;
         }
+        
     </style>
+    <link type ="text/css" rel="stylesheet" href="css/stil.css"> <!-- <link rel="stylesheet" href="css/stil.css"> Hocanın yazdığı-->
+    
 
 </head>
 <body>
@@ -33,6 +36,10 @@
     </p>
     <p id="star"> <!-- id ile style kullanımı-->
         Diğer paragraf
+    </p>
+
+    <p class="stil2">
+        Css dosyasından çekilen stil ile yazılan paragraf
     </p>
 </body>
 </html>
